# ai-rakugaki-app

./: .gitignore  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  CUDA_test.py  Dockerfile  SD1.5-test.py  app.db  pyproject.toml  test_for_enviroments.py
backend/app/: crud.py  database.py  image_generater.py  init_db.py  main.py  models.py  schemas.py  utils.py
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/.next/server/: server-reference-manifest.json
frontend/.next/static/webpack/: webpack.4a729703f50f1807.hot-update.js
frontend/.next/static/webpack/app/: layout.4a729703f50f1807.hot-update.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/save-image/: route.ts
frontend/src/app/api/set-topic/: route.ts
frontend/src/app/draw/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/result/: page.tsx
frontend/src/components/: drawing-page.tsx  landing-page.tsx
src/app/: page.tsx
src/app/api/save-image/: route.ts
src/components/: drawing-page.tsx
