[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.1",
    "aioredis>=2.0.1",
    "celery>=5.4.0",
    "controlnet-aux>=0.0.9",
    "diffusers==0.30.3",
    "fastapi[standard]>=0.115.2",
    "huggingface-hub[cli]>=0.26.0",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "sqlalchemy>=2.0.36",
    "torch==2.4.1+cu124; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.19.1+cu124; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "transformers>=4.45.2",
    "uuid>=1.30",
    "uvicorn>=0.32.0",
    "websockets>=13.1",
]

# 書き方の参考にさせてもらったページ: https://zenn.dev/mjun0812/articles/b32f870bb3cdbf

[tool.uv.sources]
torch = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
    { index = "torch-cpu", marker = "sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')"},
]
torchvision = [
    { index = "torch-cuda", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
    { index = "torch-cpu", marker = "sys_platform == 'darwin' or ( sys_platform == 'linux' and platform_machine == 'aarch64')"},
]

[[tool.uv.index]]
name = "torch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
